--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,6 @@
 
     <style name="CorrectTextView" parent="TextViewBase">
         <item name="android:textColor">@color/correctAnswerColor</item>
-        <item name="android:layout_marginBottom">@dimen/score_text_view_margin</item>
         <item name="android:layout_marginRight">@dimen/score_text_view_margin</item>
     </style>
 
@@ -31,7 +30,7 @@
         <item name="android:layout_height">0dp</item>
         <item name="android:textColor">@color/questionColor</item>
         <item name="android:textSize">@dimen/question_text_view_text_size</item>
-        <item name="android:gravity">center</item>
+        <item name="android:gravity">center|bottom</item>
     </style>
 
     <!-- Custom Answer Buttons -->
